--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ h3, h2, hr{
             border: 1px solid rgba(0, 0, 0, 0.5); 
             margin-bottom: 8px;
             font-size: 1rem;
-            ;
+            outline-color: #3fb0d6;
         }
 
         & button{
@@ -283,7 +283,7 @@ footer{
             flex-direction: column;
             width: 100%;
             margin-bottom: 32px;
-}
+        }
     }
 
     @media screen and (min-width: 641px) and (max-width: 1023px) {
